// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with all props 1`] = `
<p>
  <strong>
    Test Title
  </strong>
  : 
  <em>
    Test Subtitle
  </em>
   
  by 
  <strong>
    Test Author, Another Author
  </strong>
   (
  <ExternalLink
    to="http://example.com"
  >
    Open Library
  </ExternalLink>
  )
</p>
`;

exports[`renders correctly without optional props 1`] = `
<p>
  <strong>
    Test Title
  </strong>
   
  by 
  <strong>
    Test Author, Another Author
  </strong>
   (
  <ExternalLink
    to="http://example.com"
  >
    Open Library
  </ExternalLink>
  )
</p>
`;
